# cdon-watcher

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.crawler  GEMINI.md  README.md  Taskfile.yml  add_test_case.py  cdon_scraper.py  cdon_scraper_v2.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fastapi_sqlmodel_migration_plan.md  improvements.md  listing_crawler.py  make-executable.sh  monitor.py  nginx.conf  product_parser.py  pyproject.toml  quickstart.sh  requirements.txt  test_ui_integration.py  type_safety_cleanup_plan.md  verify-installation.sh
.github/workflows/: python-ci.yml
docs/: 01_overview.md  02_setup.md  03_usage.md  04_api_reference.md  05_database_schema.md  06_configuration.md  07_development.md  08_troubleshooting.md  README.md
scripts/: backup.sh  build.sh  manage_ignored_movies.sh  manage_watchlist_movies.sh  migrate-to-vps.sh  run-dev.sh  run-prod.sh
src/cdon_watcher/: __init__.py  __main__.py  add_test_case.py  cdon_scraper.py  cdon_scraper_v2.py  cli.py  config.py  database.py  listing_crawler.py  models.py  monitor.py  monitoring_service.py  notifications.py  product_parser.py  schemas.py  tmdb_service.py
src/cdon_watcher/database/: __init__.py  connection.py  repository.py
src/cdon_watcher/static/css/: style.css
src/cdon_watcher/static/js/: main.js
src/cdon_watcher/templates/: index.html
src/cdon_watcher/web/: app.py  routes.py
tests/: conftest.py
tests/integration/: test_api_contract.py  test_hybrid_workflow.py  test_legacy_hybrid_workflow.py  test_listing_crawler.py  test_single_url_processing.py  test_web_api.py
tests/unit/: test_add_test_case.py  test_config.py  test_database_manager.py  test_database_product_id.py  test_models.py  test_notifications.py  test_product_parser.py  test_repository_watchlist_exclusion.py  test_search_filtering.py  test_tmdb_service.py  test_web_app.py
