[project]
name = "cdon-watcher"
version = "0.1.0"
description = "CDON Blu-ray price tracker and monitor"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.41.0",
    "flask>=3.0.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.1",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --timeout=60"
timeout = 60
